<resources>
    <string name="app_name">KE-NTDs</string>
    <string name="ke_ntds">KE-NTDs</string>
    <string name="login">User Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_use_register">New use, register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already registered, Login</string>
    <string name="cases">CASES</string>
    <string name="report_case">REPORT CASE</string>
    <string name="disease_mobility">Disease Mobility</string>
    <string name="ke_ntds_dashboard">KE-NTDs Dashboard</string>
    <string name="disease_prevalence">Disease Prevalence</string>
    <string name="disease_diagnosis">Disease Diagnosis</string>
    <string name="treatment">Treatment</string>
    <string name="contact_experts">Contact Experts</string>
    <string name="about_ke_ntds">About KE-NTDs</string>
    <string name="meet_our_experts">Meet Our Experts</string>
    <string name="location">Location</string>
    <string name="case_type">Case type</string>
    <string name="select_mobility">Mobility status</string>
    <string name="capture_case">Capture Image</string>
    <string name="tungiasis">Tungiasis</string>
    <string name="lymphatic_filariasis">Lymphatic Filariasis</string>
    <string name="glaucoma">Glaucoma</string>
    <string name="schistosomiasis">Schistosomiasis</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="filariasis_diag">
        Macroscopic examination
    </string>
    <string name="filariasis_symptoms">
        1. Itchy skin\n
        2. Abdominal pain\n
        3. Chest pain\n
        4. Musch pain\n
        5. Swelling under skin
    </string>
    <string name="filariasis_treatment">
        <li>Antibiotics - Doxycydine (Doxy100, vibromicine, Doryx, Monodox, Alodox)</li>\n
        <li>Diethy/Carbamazine Citrate (DEC)</li>
    </string>

    <string name="tungiasis_diag">
        Extraction of gravid tanga penetrans flea using sterile needle\n
        Skin biopsy of suspected nodule\n
        Histologio examination of tissue
    </string>
    <string name="tungiasis_symptoms">
        1. Painful lessions\n
        2. Painful \n
        3. Itching and irritation\n
        4. Caflammation and \n
        5. Bacterial/Secondary infection
    </string>
    <string name="tungiasis_treatment">
        <li>Physical removal of the flea forceps or needles</li>\n
        <li>Application of topic/anti-parasitic e.g Ivermectin, Metrifonate and thiabondazole</li>\n
        <li>Suffocation of the flea by applying a thick wax or jelly</li>\n
        <li>Locally freezing the lesion</li>
    </string>

    <string name="glaucoma_diag">
        Complete eye exam\n
        Ophthalmologist will:\n
        <li>Measure eye pressure\n</li>
        <li>Inspect eye\'s drainage angle\n</li>
        <li>Examine optic nerve for damage\n</li>
        <li>Test peripheral eye vision\n</li>
        <li>Take picture of optic nerve\n</li>
        <li>Measure thickness of the cornea</li>
    </string>
    <string name="glaucoma_symptoms">
        1. Cloudiness of the eyes\n
        2. Enlargement of one eye or both\n
        3. Red eye\n
        4. Sensitivity to light\n
        5. Tearing\n
        6. Nausea and vomiting\n
        7. Sudden severe pain in one eye\n
        8. Blurred vision
    </string>
    <string name="glaucoma_treatment">
        <li>Eye drops (Prostaglandin)</li>\n
        <li>Laser surgery to drain the fluid out of the eye</li>
    </string>

    <string name="schistosomiasis_diag">
        Macroscopic examination of
        stool or urine samples for parasite eggs\n
        Serologic tost
    </string>
    <string name="schistosomiasis_symptoms">
        1. Rushes\n
        2. Itchy skin\n
        3. Fever\n
        4. Joint\n
        5. Musch aches\n
        6. Chills\n
        7. Cough\n
        8. Headache\n
        9. Stomach pain
    </string>
    <string name="schistosomiasis_treatment">
        <li>Drug: Praquantel for 1-2 days</li>
    </string>

    <string name="filariasis_diagnosis">Macroscopic examination</string>
    <string name="symptoms">Symptoms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">Login</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
</resources>