<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context=".Treatment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lymphatic_filariasis" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabReportCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schistosomiasis" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/glaucoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glaucoma" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tungiasis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tungiasis" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>